Added ESLint configuration

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,5 +1,12 @@
 {
   "rules": {
     "no-alert": 0
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "modules": true
+    }
   }
 }
