--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "aurelia-skeleton-navigation",
-  "version": "1.1.2",
-  "description": "A starter kit for building a standard navigation-style app with Aurelia.",
+  "name": "aurelia-demo",
+  "version": "1.0.0",
+  "description": "An AureliaJS demo app",
   "keywords": [
     "aurelia",
-    "navigation",
-    "skeleton"
+    "demo",
+    "example"
   ],
-  "homepage": "http://aurelia.io",
+  "homepage": "https://github.com/sspann/aurelia-demo",
   "bugs": {
-    "url": "https://github.com/aurelia/skeleton-navigation/issues"
+    "url": "https://github.com/sspann/aurelia-demo/issues"
   },
-  "license": "CC0-1.0",
-  "author": "Rob Eisenberg <rob@bluespire.com> (http://robeisenberg.com/)",
+  "author": "Steven Spann <sspann21@gmail.com>",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/aurelia/skeleton-navigation"
+    "url": "https://github.com/sspann/aurelia-demo.git"
   },
   "scripts": {
     "test": "gulp test",
